removed code related to create/update addresses
