# src/api-routes/persons/{osuId}/addresses.js
@@ -1,7 +1,7 @@
-import { getAddressesByInternalId, createAddress } from 'db/oracledb/addresses-dao';
+import { getAddressesByInternalId } from 'db/oracledb/addresses-dao';
 import { personExists } from 'db/oracledb/persons-dao';
 import { errorHandler, errorBuilder } from 'errors/errors';
-import { serializeAddress, serializeAddresses } from 'serializers/addresses-serializer';
+import { serializeAddresses } from 'serializers/addresses-serializer';
 
 /**
  * Get addresses by OSU ID
@@ -25,26 +25,4 @@ const get = async (req, res) => {
   }
 };
 
-/**
- * Post address
- *
- * @type {RequestHandler}
- */
-const post = async (req, res) => {
-  try {
-    const { body, params: { osuId } } = req;
-
-    const internalId = await personExists(osuId);
-    if (!internalId) {
-      return errorBuilder(res, 404, 'A person with the specified OSU ID was not found.');
-    }
-
-    const result = await createAddress(internalId, body.data.attributes);
-    const serializedAddress = serializeAddress(result, osuId);
-    return res.send(serializedAddress);
-  } catch (err) {
-    return errorHandler(res, err);
-  }
-};
-
-export { get, post };
+export { get };
